Updated according to changes in corresponding module

--- a/Module9_pandas2_solutions.ipynb
+++ b/Module9_pandas2_solutions.ipynb
@@ -81,7 +81,7 @@
       "metadata": {
         "id": "wkbD145FMFJ4"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -235,27 +235,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<font color='red'>Exercise 8 solution</font>  "
-      ],
-      "metadata": {
-        "id": "ITQvZWvfkOzN"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "my_df.sort_values(by = 'hispPop', ascending = False)"
-      ],
-      "metadata": {
-        "id": "etyXhEyekQx2"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "<font color='red'>Exercise 9 solution</font>  \n",
+        "<font color='red'>Exercise 8 solution</font>  \n",
         "Run the cell below to display the first five rows of the dataframe to verify that the original order hasn't changed after calling the `sort_values()` method."
       ],
       "metadata": {
@@ -278,7 +258,7 @@
       "source": [
         "If you actually want the dataframe to change according to the `sort_values()` method, you'll need to include yet another argument in the parentheses: `inplace = True`.\n",
         "\n",
-        "<font color='red'>Exercise 10 solution</font>  \n",
+        "<font color='red'>Exercise 9 solution</font>  \n",
         "Sort the `my_df` dataframe again by total population in ascending order (default) as you did in Exercise 6, but include the above argument this time to actually change the dataframe. Then, add a line and display the first five rows again to ensure that the dataframe has changed."
       ],
       "metadata": {
@@ -340,7 +320,7 @@
     {
       "cell_type": "code",
       "source": [
-        "my_df['hisp_ratio'] = my_df.hisp_pop / my_df.total_pop * 100\n",
+        "my_df['hisp_percent'] = my_df.hisp_pop / my_df.total_pop * 100\n",
         "my_df.head()"
       ],
       "metadata": {
@@ -352,8 +332,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<font color='red'>Exercise 13 solution</font>  \n",
-        "Now say you'd also like a column `non_hisp_pop` that gives the non-Hispanic population for each state. Write the code for this below, and be sure to display the results using `my_df.head()` at the end."
+        "<font color='red'>Exercise 13</font>  \n",
+        "Now say you'd also like a column `non_hisp_percent` that gives the percentage of non-Hispanic folks for each state. Write the code for this below, and be sure to display the results using `my_df.head()` at the end.  \n",
+        "Note: Either of the two lines below are valid solutions to this exercise. The second is simply commented out so that only one is run."
       ],
       "metadata": {
         "id": "ZM2riMsWduLg"
@@ -362,7 +343,8 @@
     {
       "cell_type": "code",
       "source": [
-        "my_df['non_hisp_pop'] = my_df.total_pop - my_df.hisp_pop\n",
+        "my_df['non_hisp_percent'] = 100 - my_df.hisp_percent\n",
+        "# my_df['non_hisp_percent'] = (my_df.total_pop - my_df.hisp_pop) / my_df.total_pop * 100\n",
         "my_df.head()"
       ],
       "metadata": {
@@ -375,7 +357,7 @@
       "cell_type": "markdown",
       "source": [
         "<font color='red'>Exercise 14 solution</font>  \n",
-        "Say you decide that you don't want the `hisp_ratio` or the `non_hisp_pop` columns afterall. Remove these columns from the `my_df` dataframe using the syntax above as a reference."
+        "Say you decide that you don't want the `hisp_percent` or the `non_hisp_percent` columns afterall. Remove these columns from the `my_df` dataframe using the syntax above as a reference."
       ],
       "metadata": {
         "id": "Xs1FMO9meIXJ"
@@ -384,7 +366,7 @@
     {
       "cell_type": "code",
       "source": [
-        "my_df.drop(columns = ['hisp_ratio', 'non_hisp_pop'], inplace = True)\n",
+        "my_df.drop(columns = ['hisp_percent', 'non_hisp_percent'], inplace = True)\n",
         "my_df.head()"
       ],
       "metadata": {
