Add filepath for rental csv

--- a/Module11_statistics.ipynb
+++ b/Module11_statistics.ipynb
@@ -57,7 +57,7 @@
         "\n",
         "Created by Valerie Carr and Jaime Zuspann  \n",
         "Licensed under a Creative Commons license: CC BY-NC-SA  \n",
-        "Last updated: Mar 20, 2022  \n",
+        "Last updated: Mar 21, 2022  \n",
         "\n",
         "**Learning outcomes**  \n"
       ]
@@ -89,8 +89,7 @@
       "cell_type": "markdown",
       "source": [
         "<font color='red'>Exercise 1</font>  \n",
-        "Run the following cell to import the Pandas library and read in a csv file to use throughout this module. Feel free to add a call to `rental_df.head()` to view a portion of this new dataframe.  \n",
-        "<font color='green'>rental csv needed</font>"
+        "Run the following cell to import the Pandas library and read in a csv file to use throughout this module. Feel free to add a call to `rental_df.head()` to view a portion of this new dataframe.  "
       ],
       "metadata": {
         "id": "g_6fH22iMn1P"
@@ -100,13 +99,13 @@
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
-        "filepath = \"filepath here\"\n",
+        "filepath = \"https://raw.githubusercontent.com/valeriecarr/engr120/main/S21/rental_prices.csv\"\n",
         "rental_df = pd.read_csv(filepath)"
       ],
       "metadata": {
         "id": "zwb0bXjYMm_9"
       },
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -383,7 +382,7 @@
       "source": [
         "from scipy import stats"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
