Add pathfile for rental csv

--- a/Module11_statistics_solutions.ipynb
+++ b/Module11_statistics_solutions.ipynb
@@ -57,7 +57,7 @@
         "\n",
         "Created by Valerie Carr and Jaime Zuspann  \n",
         "Licensed under a Creative Commons license: CC BY-NC-SA  \n",
-        "Last updated: Mar 20, 2022  "
+        "Last updated: Mar 21, 2022  "
       ]
     },
     {
@@ -74,13 +74,13 @@
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
-        "filepath = \"filepath here\"\n",
+        "filepath = \"https://raw.githubusercontent.com/valeriecarr/engr120/main/S21/rental_prices.csv\"\n",
         "rental_df = pd.read_csv(filepath)"
       ],
       "metadata": {
         "id": "zwb0bXjYMm_9"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -253,7 +253,7 @@
     {
       "cell_type": "code",
       "source": [
-        "rental_df.groupby(by = ['bedrooms', 'state']).mean()"
+        "rental_df.groupby(by = ['state', 'bedrooms']).mean()"
       ],
       "metadata": {
         "id": "sF3VCZAR7ns5"
@@ -286,7 +286,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 4a. Pearson's Correlation\n",
         "<font color='red'>Exercise 10</font>  \n",
         "Run the cell below to see the correlation between states' total population and Hispanic population."
       ],
