Modified according to Valerie's comments

--- a/Module11_statistics.ipynb
+++ b/Module11_statistics.ipynb
@@ -57,9 +57,12 @@
         "\n",
         "Created by Valerie Carr and Jaime Zuspann  \n",
         "Licensed under a Creative Commons license: CC BY-NC-SA  \n",
-        "Last updated: Mar 21, 2022  \n",
+        "Last updated: Mar 25, 2022  \n",
         "\n",
-        "**Learning outcomes**  \n"
+        "**Learning outcomes**  \n",
+        "In this module you will learn how to:  \n",
+        "1. Use `Pandas` methods to calculate summary and descriptive statistics\n",
+        "2. Use the `stats` module within the `SciPy` library to perform a correlational analysis"
       ]
     },
     {
@@ -89,7 +92,11 @@
       "cell_type": "markdown",
       "source": [
         "<font color='red'>Exercise 1</font>  \n",
-        "Run the following cell to import the Pandas library and read in a csv file to use throughout this module. Feel free to add a call to `rental_df.head()` to view a portion of this new dataframe.  "
+        "Below, we have included code that imports the Pandas library and provides a path to a CSV file that you'll be using for the rest of the module. Your job is to add a couple new lines of code that:\n",
+        "* Read in the CSV file to create a dataframe named `rental_df`\n",
+        "* Check the header of the dataframe\n",
+        "\n",
+        "If you need a reminder of how to perform these steps, look back at Module 8 (Pandas I)."
       ],
       "metadata": {
         "id": "g_6fH22iMn1P"
@@ -100,12 +107,15 @@
       "source": [
         "import pandas as pd\n",
         "filepath = \"https://raw.githubusercontent.com/valeriecarr/engr120/main/S21/rental_prices.csv\"\n",
-        "rental_df = pd.read_csv(filepath)"
+        "\n",
+        "# read in CSV file\n",
+        "\n",
+        "# display header\n"
       ],
       "metadata": {
         "id": "zwb0bXjYMm_9"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -115,24 +125,25 @@
       },
       "source": [
         "## 2. Summarizing and Describing Data\n",
-        "Before performing statistical tests, it is often helpful to summarize a data set. We'll look at a data set relating to rental prices in 100 cities around the country.  \n",
+        "Before diving deeper into statistical analysis, it's a great idea to summarize a data set and calculate descriptive statistics. The `rental_df` dataframe that you created above includes median rental prices in 100 cities around the US.  \n",
         "\n",
-        "First, what does it mean to \"summarize\" a data set? There are many ways to summarize a data set, including:  \n",
+        "There are many ways to summarize or describe a data set, including:  \n",
         "* Total number of observations\n",
-        "  - Essentially, how many rows are in the data set?\n",
-        "* Number of unique values\n",
-        "  - Ex: The dataset contains many different cities within the same state; how many unique states are represented?\n",
-        "* Number of observations per unique value\n",
-        "  - Ex: How many times does each state appear?\n",
-        "* Measures of central tendency and variability\n",
-        "  - mean, median, mode, variance, standard deviation\n",
-        "* Quantiles, min, and max\n",
-        "  - Quantiles: 25th, 50th, 75th percentile for example  \n",
+        "  - Ex: How many rows are in `rental_df`?\n",
+        "* Number of unique values in a given column\n",
+        "  - Ex: `rental_df` includes data from several cities within the same state; how many unique states are represented in the `state` column?\n",
+        "* Number of observations per unique value in a given column\n",
+        "  - Ex: How many times does each state appear in the `state` column?\n",
+        "* Measures of central tendency and variability for columns with numerical values\n",
+        "  - Ex: mean, median, mode, variance, standard deviation\n",
+        "* Min, max, and quantiles for columns with numerical values\n",
+        "  - Quantiles ex: 25th, 50th, 75th percentile \n",
         "\n",
         "\n",
-        "### 2a. Summary methods:\n",
+        "### 2a. Pandas methods:\n",
         "\n",
-        "Here is a list of a few common methods for summarizing data:  \n",
+        "See below for a table that includes common Pandas methods for summarizing and describing data:\n",
+        "\n",
         "\n",
         "<table>\n",
         "  <tr>\n",
@@ -179,15 +190,19 @@
         "  <tr>\n",
         "    <td>df_name['col_name'].max()</td>\n",
         "  </tr>\n",
-        "</table>  \n",
+        "</table>\n",
+        "\n",
+        "\n",
+        "Note of interest for Stats instructors: By default, Pandas normalizes standard deviation and variance using N-1 (sample), rather than N (population). If you prefer N, you can include an additional argument, as described [here](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.var.html). \n",
         "\n",
         "<font color='red'>Exercise 2</font>  \n",
-        "Let's put some of these to practice. Run the following cells to see the output."
+        "Run each of the cells below to see examples of these methods applied to the `state` column of `rental_df`:"
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "# number of observations in the state column\n",
         "rental_df['state'].count()"
       ],
       "metadata": {
@@ -199,6 +214,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# number of unique values in the state column\n",
         "rental_df['state'].nunique()"
       ],
       "metadata": {
@@ -210,6 +226,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# number of observations per unique value in the state column\n",
         "rental_df['state'].value_counts()"
       ],
       "metadata": {
@@ -221,10 +238,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This summarization data can also be added into print statements to display multiple outputs from the same cell.  \n",
-        "\n",
         "<font color='red'>Exercise 3</font>  \n",
-        "Run the cell to see the output."
+        "Refer to the `quantile()` method in the table above to calculate the 25th, 50th, and 75th percentile values for the `median_rent` column. As a reminder, these percentiles should be listed as decimals, e.g., 0.25 rather than 25."
       ],
       "metadata": {
         "id": "UTWCpB0FO9U7"
@@ -233,10 +248,7 @@
     {
       "cell_type": "code",
       "source": [
-        "print('Mean: ', rental_df['median_rent'].mean())\n",
-        "print('Median: ', rental_df['median_rent'].median())\n",
-        "print('Standard deviation: ', rental_df['median_rent'].std())\n",
-        "print('Max: ', rental_df['median_rent'].max())\n"
+        ""
       ],
       "metadata": {
         "id": "QCqLyNldPJl0"
@@ -248,7 +260,7 @@
       "cell_type": "markdown",
       "source": [
         "<font color='red'>Exercise 4</font>  \n",
-        "Refer to the `quantile()` method in the table of methods above to display the median rent for the 25th, 50th, and 75th percentile."
+        "Below, we demonstrate how you might include various descriptive statistics embedded in a string, making the outputs easier to read. Run the cell to see the mean and median values for the `median_rent` column."
       ],
       "metadata": {
         "id": "oejN8BI0P3lp"
@@ -257,7 +269,8 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "print('Mean:', rental_df['median_rent'].mean())\n",
+        "print('Median:', rental_df['median_rent'].median())"
       ],
       "metadata": {
         "id": "9j7UNdUjQhlX"
@@ -268,11 +281,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Computing these measures one-by-one for each column would be rather tedious. Instead, we can use the method `describe()` to compute several of these measures for all numerical data in the dataframe. The syntax goes like this:  \n",
-        "`df_name.describe()`  \n",
-        "\n",
         "<font color='red'>Exercise 5</font>  \n",
-        "Now run the cell to see the data summarized all at once."
+        "Now you try! Using the example code in Exercise 4 as a guide, print two strings, the first of which states the standard deviation, and the second of which states the maximum value of the `median_rent` column."
       ],
       "metadata": {
         "id": "dfTqbn7DXuDX"
@@ -281,10 +291,35 @@
     {
       "cell_type": "code",
       "source": [
-        "rental_df.describe()"
+        ""
       ],
       "metadata": {
         "id": "CsD2k1ujYeaX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " <font color='red'>Exercise 6</font>  \n",
+        "Computing these descriptive one-by-one for each numerical column in a dataframe could be rather tedious. Instead, we can use the method `describe()` to compute several of these measures for *all* numerical columns using the following syntax:\n",
+        "\n",
+        "`df_name.describe()` \n",
+        "\n",
+        "Below, write code that applies this method to the `rental_df` dataframe:"
+      ],
+      "metadata": {
+        "id": "yaQOm2HkRhYg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "KjeKYGOwRjg_"
       },
       "execution_count": null,
       "outputs": []
@@ -296,12 +331,19 @@
       },
       "source": [
         "## 3. Grouping Data\n",
-        "### 3a. Grouping by a Single Column\n",
-        "Is there an easy way to group data together according to a particular variable? For example, what if we wanted to group rent prices according to the number of bedrooms? The method that does exactly this is called `groupby()`, and it's syntax goes like this:  \n",
-        "`df_name.groupby(by = 'col_name').method_name()`  \n",
+        "Rather than view descriptive statistics for all observations in a dataframe, we can instead use the `groupby()` method to group the data by one or more variables of interest. For example, we could examine median rent prices according to number of bedrooms.\n",
         "\n",
-        "<font color='red'>Exercise 6</font>  \n",
-        "Now let's apply this to our rental dataframe. If we wanted to get the mean rent for places according to how many rooms they have, the code would look like that in the cell below. Run the cell to see the output."
+        "### 3a. Grouping by a Single Variable\n",
+        "The syntax for grouping the dataframe by a single variable is as follows:\n",
+        "\n",
+        "`df_name.groupby(by = 'col_name').method_name()`\n",
+        "\n",
+        "Breaking down this syntax:\n",
+        "* `by = col_name` is used to indicate which variable (i.e., column) you'll be using to group the dataframe\n",
+        "* `method_name` simply indicates the desired descriptive statistic to display, such as mean, median, etc.\n",
+        "\n",
+        "<font color='red'>Exercise 7</font>  \n",
+        "Using the example syntax above, write code that groups the rental data according to number of bedrooms and displays the mean."
       ]
     },
     {
@@ -310,7 +352,7 @@
         "id": "sjOCmnIDfaw8"
       },
       "source": [
-        "rental_df.groupby(by = 'bedrooms').mean()"
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -318,8 +360,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<font color='red'>Exercise 7</font>  \n",
-        "Use the `groupby()` along with the appropriate method to show how many places are available based on the number of bedrooms."
+        "### 3b. Grouping by Multiple Variables\n",
+        "Now, what about grouping by more than one variable -- i.e. grouping by the number of bedrooms *and* state? The only change we'd need to make to the line of code above is to provide a list of columns rather than a single column name. The syntax for this looks like this:\n",
+        "\n",
+        "`df_name.groupby(by = ['col1', 'col2', 'etc.']).method_name()`\n",
+        "\n",
+        "The only difference between the syntax for grouping by multiple variables\n",
+        "\n",
+        "<font color='red'>Exercise 8</font>  \n",
+        "Try this challenge for yourself -- group the `rental_df` dataframe by state and number of bedrooms."
       ],
       "metadata": {
         "id": "GgVaZkeF5-iD"
@@ -367,11 +416,11 @@
         "id": "m0TsiC-If58b"
       },
       "source": [
-        "## 4. Statistics with `stats`\n",
-        "We've been using the Pandas library to subset, manipulate, and summarize dataframes. Now we'll introduce you to a new library -- Scipy. Scipy gets its name from the conjuntion of 'science' and 'python'.  We'll use the Scipy library for statistical tests. The library is huge, however, so we'll import only a small portion of it that pertains to statistics. We'll do so in the following exercise.\n",
+        "## 4. Inferential statistics with `stats`\n",
+        "We've been using the `Pandas` library to subset, modify, and summarize dataframes. To perform inferential statistics, we'll introduce you to a new library, `SciPy`. This library gets its name from the conjuntion of 'Science' and 'Python' and is pronounced like \"sigh-pie.\" The library is enormous and serves many science-related purporses, so we'll only import a small portion of the library pertaining to statistics, as demonstrated below. \n",
         "\n",
         "<font color='red'>Exercise 9</font>  \n",
-        "The cell below imports the `stats` component of the `scipy` library. Run the cell and remember that no output will be produced."
+        "The cell below imports the `stats` module within the `scipy` library. Run the cell, keeping in mind that no output will be produced."
       ]
     },
     {
@@ -388,11 +437,18 @@
     {
       "cell_type": "markdown",
       "source": [
-        "To use a function from the `stats` module of the Scipy library, you do not need to include the keywork `scipy`. Instead, you'll just use the following syntax:  \n",
-        "`stats.func_name()`  \n",
-        "where 'func_name()' is the name of a specific function you're using. You can find the full list of functions included in the `stats` module here: https://docs.scipy.org/doc/scipy/reference/stats.html  \n",
+        "The `stats` module contains a wide array of functions pertaining to statistics, such as:\n",
+        "* Correlation\n",
+        "* Linear regression\n",
+        "* T-test\n",
+        "* Chi square\n",
+        "* Binomial test\n",
+        "* Tests of skew and kurtosis\n",
+        "* And many more! You can find a complete list of functions [here](https://docs.scipy.org/doc/scipy/reference/stats.html).  \n",
         "\n",
-        "For now, we'll use a single, simple example: Correlation (Pearson)."
+        "To use a given function within the `stats` module, use the following syntax: `stats.func_name()` \n",
+        "\n",
+        "Breaking down this syntax, `stats` is simply the name of the module, and `func_name()` is a placeholder for the specific function you'd like to use. We'll keep things short and sweet for today's purposes and simply demonstrate how to use the `pearsonr()` function."
       ],
       "metadata": {
         "id": "0SCFilWQZt-L"
@@ -402,20 +458,27 @@
       "cell_type": "markdown",
       "source": [
         "### 4a. Pearson's Correlation\n",
-        "Pearson's Correlation is used to evaluate the linear relationship between two sets of continuous values. For example, when the values for one variable increase, do the values of the other? To perform this test, we use the function `pearsonr()` with the following syntax:  \n",
+        "The `pearsonr()` function is used to evaluate the linear relationship between two data sets and assumes that both are normally distributed. This function uses the following syntax:\n",
+        "\n",
         "`stats.pearsonr(df_name['col1'], df_name['col2'])`\n",
-        "The `pearsonr()` function returns two values: `r` and `p`.  \n",
-        "The `r` value:\n",
-        "  * ranges from -1 to 1\n",
-        "  * a positive value means positive correlation (e.g., in kids, when height goes up, so does weight)\n",
-        "  * a negative value means negative correlation (e.e., when temperature drops in winter, heating bill goes up)\n",
         "\n",
-        "<font color='green'>What is the p value? I didn't see it in the slides</font>\n",
+        "Breaking down the syntax:\n",
+        "* We're using the `stats` module and the `pearsonr()` function\n",
+        "* We need to specify two variables of interest (i.e., two columns in a dataframe)\n",
         "\n",
-        "Let's do an example with our states dataframe from previous modules. Is there a significant correlation between a state's total population and its Hispanic population? I.e., is it the case that states with a large total population have a larger Hispanic population?  \n",
+        "The `pearsonr()` function produces two outputs: `r` and `p`, with `r` ranging from -1 to 1 and `p` ranging from 0 to 1. \n",
+        "\n",
+        "Two notes:\n",
+        "* The output doesn't specify which value is which, so you'll have to remember that `r` comes first, followed by `p`.\n",
+        "* If the resulting p-value is quite small, it's printed in scientific notation (e.g., 2.63e-11). Many students aren't familiar with this type of notation, to which end we recommend including a bit of hand-holding.\n",
         "\n",
         "<font color='red'>Exercise 10</font>  \n",
-        "Run the cell below to see the correlation described above."
+        "The rental data set we've used thus far isn't well-suited for a correlational analysis. Instead, we'll go back to the state population data set used in prior modules. We'll ask the question: Is there a significant correlation between a state's total population and its Hispanic population? \n",
+        "\n",
+        "Below, we've included the relevant filepath for you. Your job is to:\n",
+        "1. Read in the CSV file to create a dataframe called `states_df`\n",
+        "2. Use the `pearsonr()` function to examine the correlation between values in the `totalPop` and `hispPop` columns within this dataframe\n",
+        "3. Ask yourself whether the correlation was significant, and if so, if the correlation is positive or negative"
       ],
       "metadata": {
         "id": "7L4_7LdKapNe"
@@ -425,9 +488,10 @@
       "cell_type": "code",
       "source": [
         "filepath = 'https://raw.githubusercontent.com/valeriecarr/engr120/main/S21/state_pop.csv'\n",
-        "states_df = pd.read_csv(filepath);\n",
         "\n",
-        "stats.pearsonr(states_df['totalPop'], states_df['hispPop'])"
+        "# read in CSV file\n",
+        "\n",
+        "# run correlational analysis\n"
       ],
       "metadata": {
         "id": "jwEbCiCHkqIu"
@@ -438,17 +502,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The first value returned is the `r` value, and the second is the `p` value. Note that the `p` value is given in scientific format. Since the value returned for `r` is positive and close to 1, this means that there is a high positive correlation between states' total population and Hispanic population."
-      ],
-      "metadata": {
-        "id": "GYkc2-hplTj-"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "## All done!\n",
-        "You've finished the Stats module! Next we'll learn how to visualize the data we're working with."
+        "You've finished the Stats module! In the final module of this training course, we'll learn how to visualize the data we're working with."
       ],
       "metadata": {
         "id": "vYqInSA0L4Ph"
