Updated according to changes in corresponding module

--- a/Module11_statistics_solutions.ipynb
+++ b/Module11_statistics_solutions.ipynb
@@ -64,7 +64,9 @@
       "cell_type": "markdown",
       "source": [
         "<font color='red'>Exercise 1 solution</font>  \n",
-        "Run the cell to import the pandas library and read in the rental dataframe"
+        "Below, we have included code that imports the Pandas library and provides a path to a CSV file that you'll be using for the rest of the module. Your job is to add a couple new lines of code that:\n",
+        "* Read in the CSV file to create a dataframe named `rental_df`\n",
+        "* Check the header of the dataframe"
       ],
       "metadata": {
         "id": "g_6fH22iMn1P"
@@ -75,6 +77,11 @@
       "source": [
         "import pandas as pd\n",
         "filepath = \"https://raw.githubusercontent.com/valeriecarr/engr120/main/S21/rental_prices.csv\"\n",
+        "\n",
+        "# read in CSV file\n",
+        "filepath = \"https://raw.githubusercontent.com/valeriecarr/engr120/main/S21/rental_prices.csv\"\n",
+        "\n",
+        "# display header\n",
         "rental_df = pd.read_csv(filepath)"
       ],
       "metadata": {
@@ -92,12 +99,13 @@
         "## 2. Summarizing and Describing Data\n",
         "\n",
         "<font color='red'>Exercise 2 solution</font>  \n",
-        "Run the cells to see the outputs."
+        "Run each of the cells below to see examples of these methods applied to the `state` column of `rental_df`:"
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "# number of observations in the state column\n",
         "rental_df['state'].count()"
       ],
       "metadata": {
@@ -109,6 +117,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# number of unique values in the state column\n",
         "rental_df['state'].nunique()"
       ],
       "metadata": {
@@ -120,6 +129,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# number of observations per unique value in the state column\n",
         "rental_df['state'].value_counts()"
       ],
       "metadata": {
@@ -131,10 +141,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This summarization data can also be added into print statements to display multiple outputs from the same cell.  \n",
-        "\n",
         "<font color='red'>Exercise 3 solution</font>  \n",
-        "Run the cell to see the output."
+        "Refer to the `quantile()` method in the table above to calculate the 25th, 50th, and 75th percentile values for the `median_rent` column. As a reminder, these percentiles should be listed as decimals, e.g., 0.25 rather than 25."
       ],
       "metadata": {
         "id": "UTWCpB0FO9U7"
@@ -143,10 +151,7 @@
     {
       "cell_type": "code",
       "source": [
-        "print('Mean: ', rental_df['median_rent'].mean())\n",
-        "print('Median: ', rental_df['median_rent'].median())\n",
-        "print('Standard deviation: ', rental_df['median_rent'].std())\n",
-        "print('Max: ', rental_df['median_rent'].max())\n"
+        "rental_df['median_rent'].quantile([.25, .5, .75])"
       ],
       "metadata": {
         "id": "QCqLyNldPJl0"
@@ -158,7 +163,7 @@
       "cell_type": "markdown",
       "source": [
         "<font color='red'>Exercise 4 solution</font>  \n",
-        "Refer to the `quantile()` method in the table of methods above to display the median rent for the 25th, 50th, and 75th percentile."
+        "Below, we demonstrate how you might include various descriptive statistics embedded in a string, making the outputs easier to read. Run the cell to see the mean and median values for the `median_rent` column."
       ],
       "metadata": {
         "id": "oejN8BI0P3lp"
@@ -167,7 +172,8 @@
     {
       "cell_type": "code",
       "source": [
-        "rental_df['median_rent'].quantile([.25, .5, .75])"
+        "print('Mean:', rental_df['median_rent'].mean())\n",
+        "print('Median:', rental_df['median_rent'].median())"
       ],
       "metadata": {
         "id": "9j7UNdUjQhlX"
@@ -179,7 +185,7 @@
       "cell_type": "markdown",
       "source": [
         "<font color='red'>Exercise 5 solution</font>  \n",
-        "Run the cell to see the data summarized all at once."
+        "Now you try! Using the example code in Exercise 4 as a guide, print two strings, the first of which states the standard deviation, and the second of which states the maximum value of the `median_rent` column."
       ],
       "metadata": {
         "id": "dfTqbn7DXuDX"
@@ -188,7 +194,8 @@
     {
       "cell_type": "code",
       "source": [
-        "rental_df.describe()"
+        "print('Standard deviation: ', rental_df['median_rent'].std())\n",
+        "print('Max: ', rental_df['median_rent'].max())"
       ],
       "metadata": {
         "id": "CsD2k1ujYeaX"
@@ -202,27 +209,31 @@
         "id": "E48I6l-ervev"
       },
       "source": [
-        "## 3. Grouping Data\n",
         "<font color='red'>Exercise 6 solution</font>  \n",
-        "Run the cell to see the output."
+        "Computing these descriptive one-by-one for each numerical column in a dataframe could be rather tedious. Instead, we can use the method `describe()` to compute several of these measures for *all* numerical columns using the following syntax:\n",
+        "\n",
+        "`df_name.describe()` \n",
+        "\n",
+        "Below, write code that applies this method to the `rental_df` dataframe:"
       ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "sjOCmnIDfaw8"
-      },
       "source": [
-        "rental_df.groupby(by = 'bedrooms').mean()"
+        "rental_df.describe()"
       ],
+      "metadata": {
+        "id": "hEyFUkgcT24b"
+      },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
+        "## 3. Grouping Data\n",
         "<font color='red'>Exercise 7</font>  \n",
-        "Use the `groupby()` along with the appropriate method to show how many places are available based on the number of bedrooms."
+        "Using the example syntax above, write code that groups the rental data according to number of bedrooms and displays the mean."
       ],
       "metadata": {
         "id": "GgVaZkeF5-iD"
@@ -231,7 +242,7 @@
     {
       "cell_type": "code",
       "source": [
-        "rental_df.groupby(by = 'bedrooms').count()"
+        "rental_df.groupby(by = 'bedrooms').mean()"
       ],
       "metadata": {
         "id": "DGs9-1T-6hcI"
@@ -242,9 +253,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 3b. Grouping by Multiple Columns\n",
         "<font color='red'>Exercise 8</font>  \n",
-        "Group the `rental_df` dataframe by number of bedrooms and state to find the mean rent price per group."
+        "Try this challenge for yourself -- group the `rental_df` dataframe by state and number of bedrooms."
       ],
       "metadata": {
         "id": "C6ScNrhh6pQP"
@@ -269,7 +279,7 @@
       "source": [
         "## 4. Statistics with `stats`\n",
         "<font color='red'>Exercise 9</font>  \n",
-        "Run the cell to import the `stats` module from the `scipy` library. No output will be produced."
+        "The cell below imports the `stats` module within the `scipy` library. Run the cell, keeping in mind that no output will be produced."
       ]
     },
     {
@@ -280,14 +290,17 @@
       "source": [
         "from scipy import stats"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
         "<font color='red'>Exercise 10</font>  \n",
-        "Run the cell below to see the correlation between states' total population and Hispanic population."
+        "Below, we've included the relevant filepath for you. Your job is to:\n",
+        "1. Read in the CSV file to create a dataframe called `states_df`\n",
+        "2. Use the `pearsonr()` function to examine the correlation between values in the `totalPop` and `hispPop` columns within this dataframe\n",
+        "3. Ask yourself whether the correlation was significant, and if so, if the correlation is positive or negative"
       ],
       "metadata": {
         "id": "7L4_7LdKapNe"
@@ -297,8 +310,11 @@
       "cell_type": "code",
       "source": [
         "filepath = 'https://raw.githubusercontent.com/valeriecarr/engr120/main/S21/state_pop.csv'\n",
+        "\n",
+        "# read in CSV file\n",
         "states_df = pd.read_csv(filepath);\n",
         "\n",
+        "# run correlational analysis\n",
         "stats.pearsonr(states_df['totalPop'], states_df['hispPop'])"
       ],
       "metadata": {
